#add_subdirectory(DirectX12)
add_subdirectory(Generics)
add_subdirectory(Vulkan)

target_sources(YTE
  PRIVATE
    Animation.cpp
    Animation.hpp
    BaseModel.cpp
    BaseModel.hpp
    Camera.cpp
    Camera.hpp
    Drawers.cpp
    Drawers.hpp
    ForwardDeclarations.hpp
    FacialAnimator.cpp
    FacialAnimator.hpp
    FFT_WaterSimulation.cpp
    FFT_WaterSimulation.hpp
    FlybyCamera.cpp
    FlybyCamera.hpp
    GameCamera.cpp
    GameCamera.hpp
    GPUBuffer.cpp
    GPUBuffer.hpp
    GraphicsSystem.cpp
    GraphicsSystem.hpp
    GraphicsView.cpp
    GraphicsView.hpp
    ImguiLayer.cpp
    ImguiLayer.hpp
    InstantiatedInfluenceMap.cpp
    InstantiatedInfluenceMap.hpp
    InstantiatedLight.cpp
    InstantiatedLight.hpp
    LightManager.cpp
    LightManager.hpp
    Light.cpp
    Light.hpp
    InfluenceMap.cpp
    InfluenceMap.hpp
    Material.cpp
    Material.hpp
    Model.cpp
    Model.hpp
    ParticleEmitter.cpp
    ParticleEmitter.hpp
    Sprite.cpp
    Sprite.hpp
    SpriteText.cpp
    SpriteText.hpp
    Skybox.cpp
    Skybox.hpp
    TempDiffuseColoringComponent.cpp
    TempDiffuseColoringComponent.hpp
    WaterInfluenceMapManager.cpp
    WaterInfluenceMapManager.hpp
    UBOs.cpp
    UBOs.hpp
    Vertex.hpp
)
